# Kuma

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
artifacts/: simple.iph
artifacts/simple/: debug_report.md  manifest.json
artifacts/tiny/: debug_report.md  exported_graph.json  manifest.json
examples/: __init__.py  export_simple.py  export_tiny.py  simple.py  tiny_model.py
kuma-bart/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.demo.config.ts
kuma-bart/demo/: gpuRender.ts  index.html  main.ts
kuma-bart/src/: errors.ts  index.ts  model.ts
kuma-bart/test/: dft-math.test.ts  dispatch-grid.test.ts  einsum-plan.test.ts  gather-dim-math.test.ts  iph-loader.test.ts  mock-gpu.ts  params-packing.test.ts  scheduler-graph.test.ts  setup.ts  shape-utils.test.ts  snippets.test.ts  verify-structure.test.ts
src/iphso_webgpu_export/: __init__.py  cli.py  debug.py  export.py  graph.py  manifest.py  pack_weights.py
src/kuma/: __init__.py  branching.py  compiler.py  debug.py  export.py  golden.py  graph.py  manifest.py  onnx_backend.py  onnx_compiler.py  pack_weights.py  package_iph.py
tests/: conftest.py  test_activations.py  test_artifacts.py  test_blocks.py  test_concat.py  test_conv.py  test_convnext_block.py  test_depthwise_separable.py  test_elementwise.py  test_error_cases.py  test_linear.py  test_multi_input.py  test_norm.py  test_onnx_backend.py  test_onnx_branching.py  test_package_iph.py  test_pooling.py  test_residual.py  test_shapes.py  test_upsample.py
(+98 files in other folders)
