[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kuma"
version = "0.1.0"
description = "PyTorch torch.export -> .iph compiler/exporter (Step 1 of a Torch->WebGPU compiler)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kuma = ["kernels/*.wgsl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests import conftest helpers directly (no package), so add tests/ to path
pythonpath = ["src", "tests"]
